[package]
name = "akela"
version = "0.1.0"
edition = "2024"
description = "Distributed Server-Sent Events with tag-based fan-out over Redis pub/sub."

[dependencies]
axum = "0.8"
futures = "0.3"
redis = { version = "0.32", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
